# lus

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE.md  README.md  acquis-11.md
.claude/commands/: acquis-create.md  acquis-implement.md  fastcall.md
.githooks/: pre-commit
.github/workflows/: build.yml  install-test.yml  publish-vscode.yml
licenses/: LICENSE.CARES.txt  LICENSE.LUA.txt  LICENSE.LZ4.txt
lus/: .gitignore  CHANGES.DEV.md  CHANGES.USER.md  gdb_runner.sh  luac.out  meson.build
lus-examples/: attrs.lus  catch.lus  conditions.lus  csv-stats.lus  doexpr.lus  fetch-json.lus  from.lus  groups.lus  hello.lus  http.lus  interpolation.lus  optchain.lus  pledge-sandbox.lus  slices.lus  worker-pool.lus
lus-install/: README.md  install.sh  lus.iss
lus-language/: PLAN.md  ROADMAP.md  document.lus  main.lus  protocol.lus  transport.lus  wasm.lus
lus-language/analysis/: ast.lus  diagnostics.lus  linting.lus  modules.lus  scope.lus  stdlib_data.lus  types.lus
lus-language/operations/: code_action.lus  completion.lus  definition.lus  folding.lus  format.lus  highlight.lus  hover.lus  inlay_hints.lus  prepare_rename.lus  references.lus  rename.lus  selection_range.lus  semantic_tokens.lus  signature.lus  symbols.lus  workspace_symbols.lus
lus-language/util/: position.lus  uri.lus
lus-server/: main.lus
lus-server/example/: simple.lus
lus-site/: astro.config.mjs  package.json  pnpm-lock.yaml  wrangler.jsonc
lus-site/public/: _headers
lus-site/scripts/: fetch-wasm.mjs
lus-site/src/: content.config.ts
lus-site/src/components/: AcquisList.astro  ApiEntry.astro  ApiReference.astro  Button.astro  Card.astro  Dedication.astro  Icon.astro  InstallBlocks.astro  Layout.astro  ManualAPI.astro  ManualLayout.astro  ManualNav.astro  PlaygroundLayout.astro  ReleaseCard.astro  ReleaseStrip.astro
lus-site/src/lib/: api.ts  date.ts  install.ts  playground-link.ts  release.ts  wasm-loader.ts
lus-site/src/manual/: acquis-0.mdx  acquis-1.mdx  acquis-10.mdx  acquis-11.mdx  acquis-12.mdx  acquis-13.mdx  acquis-14.mdx  acquis-15.mdx  acquis-16.mdx  acquis-17.mdx  acquis-18.mdx  acquis-19.mdx  acquis-2.mdx  acquis-20.mdx  acquis-21.mdx  acquis-22.mdx  acquis-23.mdx  acquis-24.mdx  acquis-25.mdx  acquis-26.mdx  acquis-27.mdx  acquis-3.mdx  acquis-4.mdx  acquis-5.mdx  acquis-6.mdx  acquis-7.mdx  acquis-8.mdx  acquis-9.mdx  acquis.mdx  adapting.mdx  cli.mdx  compiling.mdx  differences.mdx  getting-started.mdx  guide.mdx  ide-setup.mdx  introduction.mdx  license.mdx  releases.mdx  tldr.mdx  (+2 more)
lus-site/src/news/: changelog-1.0.0.md  changelog-1.1.0.md  changelog-1.2.0.md  changelog-1.3.0.md  changelog-1.4.0.md  changelog-1.5.0.md  changelog-1.5.1.md  changelog-1.6.0.md  changelog-1.6.1.md  changelog-1.6.2.md
lus-site/src/pages/: 404.astro  examples.astro  faq.astro  index.astro  install.sh.ts  manual.astro  playground.astro
lus-site/src/scripts/: api-search.ts  copy-code.ts  shortcuts.ts
lus-site/src/styles/: global.css
lus-spec/: README.md  build-lsp.js  generate.js
lus-spec/capi/auxiliary/: LUAL_BUFFERSIZE.md  LUAL_NUMSIZES.md  LUA_ERRFILE.md  LUA_FILEHANDLE.md  LUA_NOREF.md  LUA_REFNIL.md  luaL_Buffer.md  luaL_Reg.md  luaL_Stream.md  luaL_addchar.md  luaL_addgsub.md  luaL_addlstring.md  luaL_addsize.md  luaL_addstring.md  luaL_addvalue.md  luaL_alloc.md  luaL_argcheck.md  luaL_argerror.md  luaL_argexpected.md  luaL_buffaddr.md  luaL_buffinit.md  luaL_buffinitsize.md  luaL_bufflen.md  luaL_buffsub.md  luaL_callmeta.md  luaL_checkany.md  luaL_checkinteger.md  luaL_checklstring.md  luaL_checknumber.md  luaL_checkoption.md  luaL_checkstack.md  luaL_checkstring.md  luaL_checktype.md  luaL_checkudata.md  luaL_checkversion.md  luaL_checkversion_.md  luaL_dofile.md  luaL_dostring.md  luaL_error.md  luaL_execresult.md  (+36 more)
lus-spec/capi/core/: LUA_ERRERR.md  LUA_ERRMEM.md  LUA_ERRRUN.md  LUA_ERRSYNTAX.md  LUA_GCCOLLECT.md  LUA_GCCOUNT.md  LUA_GCCOUNTB.md  LUA_GCGEN.md  LUA_GCINC.md  LUA_GCISRUNNING.md  LUA_GCPARAM.md  LUA_GCRESTART.md  LUA_GCSTEP.md  LUA_GCSTOP.md  LUA_HOOKCALL.md  LUA_HOOKCOUNT.md  LUA_HOOKLINE.md  LUA_HOOKRET.md  LUA_HOOKTAILCALL.md  LUA_MASKCALL.md  LUA_MASKCOUNT.md  LUA_MASKLINE.md  (+180 more)
lus-tests/: README.md  enum.lus  framework.lus  lsp-harness.lus
lus-tests/h1/: archive.lus  big.lus  calls.lus  catchstat.lus  cloning.lus  constructs.lus  csv.lus  dataproc.lus  doexpr.lus  enum.lus  errors.lus  eventloop.lus  fastcall.lus  from.lus  gc.lus  global.lus  goto.lus  groups.lus  interp.lus  json.lus  literals.lus  lsp-e2e.lus  lsp-integration.lus  lsp-lint-h1.lus  lsp-unit.lus  math.lus  network.lus  parse.lus  pledge.lus  runtime-attrs.lus  security.lus  slices.lus  sort.lus  strings.lus  tpack.lus  traceback.lus  userdata.lus  utf8.lus  vararg.lus  varinfo.lus  (+3 more)
lus-tests/h3/: asyncio.lus  cli.lus  files.lus  fs.lus  runner_direct.lus  runner_local.lus  test_io.lus
lus-tests/h4/: bench_fastcall.lus  bench_field.lus  bench_gc_churn.lus  bench_global.lus  bench_inherited.lus  bench_interp.lus  bench_iter_ipairs.lus  bench_iter_pairs.lus  bench_method.lus  bench_strkey.lus  mcache_check.lus  measure.sh  runner.lus  runner_fastcall.lus  runner_micro.lus  worker_idle.lus
lus-textmate/: lus.tmLanguage.json
lus-vscode/: .gitignore  .vscodeignore  README.md  ROADMAP.md  esbuild.mjs  language-configuration.json  package.json  pnpm-lock.yaml  tsconfig.json
lus-vscode/src/: extension.ts  lspTransport.ts  wasm.ts
lus/src/: lapi.c  larchivelib.c  larena.c  larena.h  last.c  last.h  lauxlib.c  lbaselib.c  lbundle.c  lbundle.h  lcode.c  lcode.h  lcorolib.c  lcsvlib.c  ldblib.c  ldebug.c  ldo.c  ldo.h  lenum.c  lenum.h  lfastcall.c  lfastcall.h  lformat.c  lformat.h  lfslib.c  lfunc.c  lfunc.h  lgc.c  lglob.c  lglob.h  linit.c  liolib.c  ljsonlib.c  ljumptab.h  llex.c  llex.h  llimits.h  lmathlib.c  lmem.c  lmem.h  (+41 more)
lus/src/events/: lev.c  lev.h  lev_epoll.c  lev_iocp.c  lev_kqueue.c  lev_select.c  lev_threadpool.c  lev_threadpool.h
lus/tools/: pgo-build.sh
lus/wasm/: build.sh  lev_wasm_stubs.c  lus_wasm.c
scripts/: lint.sh  setup-hooks.sh
(+255 files in other folders)
